ChangeLog

Upcoming version
[BUGFIX]  parse_ini_string(): Passing null to parameter #1 ($ini_string) of type string is deprecated. Thanks to medarob. https://github.com/tpwd/ke_search/issues/247
[FEATURE] Make it possible to index multiple additional tables for a content element. https://github.com/tpwd/ke_search/issues/230

Version 6.0.1, 25 October 2024
[BUGFIX]  Add missing storage page and recursive option. Thanks to Torben Hansen. https://github.com/tpwd/ke_search/issues/251
[BUGFIX]  Undefined array key "sortByAdmin". Thanks to Simon Praetorius. https://github.com/tpwd/ke_search/issues/252

Version 6.0.0, 18 October 2024
[!!!]     This version drops support for TYPO3 11.
[!!!]     Plugins are now registered as content elements, not as general plugins ("list_type"). A migration wizard is provided. You may adapt your configuration for content element restrictions e.g. EXT:content_defender or similar. See https://docs.typo3.org/c/typo3/cms-core/main/en-us/Changelog/13.4/Deprecation-105076-PluginContentElementAndPluginSubTypes.html#migration
[TASK]    Update requirements for TYPO3 13
[TASK]    Migrate plugin registration
[TASK]    Remove obsolete ext_tables.php
[TASK]    Migrate registration of status dashboard widget, https://docs.typo3.org/c/typo3/cms-core/main/en-us/Changelog/12.0/Breaking-96812-NoFrontendTypoScriptBasedTemplateOverridesInTheBackend.html#widget-registration-using-services-yaml
[TASK]    Don't use QueryBuilder->add() anymore because it has been removed, https://docs.typo3.org/c/typo3/cms-core/main/en-us/Changelog/13.0/Breaking-102875-QueryBuilderChanges.html
[TASK]    Remove language-related function from AbstractPlugin and use custom translate function instead
[TASK]    Migrate database queries to use type constants from Connection instead of PDO, https://docs.typo3.org/m/typo3/reference-coreapi/main/en-us/ApiOverview/Database/QueryBuilder/Index.html#database-query-builder-create-named-parameter